--- a/display-bos.html
+++ b/display-bos.html
@@ -67,7 +67,9 @@ includeHTML();
 	<p><!-- <iframe src="728x90/OPT559_Display_LATimes_728x90.html" width="728" height="90" style="border:none;"></iframe> </p> 
 	<p> <iframe src="300x600/OPT559_Display_LATimes_300x600.html" width="300" height="600" style="border:none;"></iframe> &nbsp; &nbsp;
 		<iframe src="160x600/OPT559_Display_LATimes_160x600.html" width="160" height="600" style="border:none;"></iframe> &nbsp; &nbsp; -->
-		<iframe src="300x250/OPT700_Display_BoS-WIN_300x250.html" width="300" height="600" style="border:none;"></iframe> </p> 
+		<iframe src="300x250/OPT700_Display_BoS-WIN_300x250.html" width="300" height="600" style="border:none;"></iframe>  &nbsp; &nbsp;
+		<iframe src="300x250-alt/OPT700_Display_BoS-WIN_300x250-alt.html" width="300" height="600" style="border:none;"></iframe> </p> 
+
   <!--
 	<p> <iframe src="320x50/OPT559_Display_LATimes_320x50.html" width="320" height="50" style="border:none;"></iframe> &nbsp; &nbsp; 
 		<iframe src="300x50/OPT559_Display_LATimes_300x50.html" width="300" height="50" style="border:none;"></iframe> </p>  
