--- a/display-bos-b.html
+++ b/display-bos-b.html
@@ -52,7 +52,7 @@ function includeHTML() {
 
 <body>
 	
-<div w3-include-html="menu-hey-display.html"></div> 
+<div w3-include-html="menu-hey-display-ab.html"></div> 
 
 <script>
 includeHTML();
