--- a/menu-hey-display.html
+++ b/menu-hey-display.html
@@ -1,9 +1,5 @@
-<p>OPT CA-700 | Best of the Southland Award 
+<p>OPT CA-700 | Best of the Southland Award <br />Display banners
 <img style="float: right; margin: 0px 15px 0px 0px;" src="Hey_Logo_wTag-Lg.svg" height="88" width="126" alt="Hey logo" srcset="Hey_Logo_wTag-Lg.svg" /></font></p>
-   
-<p>
-
-	<br />
-	</p>
+<p>	</p>
 <p>&nbsp; &nbsp;</p>
 
